# ai-resume-coach

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  coverage.json  p4-concepts-primer.html  pyproject.toml  streamlit_app.py
data/analysis/: multi_hop_questions.jsonl
data/corrected/: correction_results.jsonl  correction_summary.json
data/feedback/: feedback.jsonl
data/labeled/: failure_labels.jsonl  judge_results.jsonl
data/validated/: validation_stats.json
docs/: PRD.md
docs/adr/: ADR-001-instructor-nested-schemas.md  ADR-002-skill-normalization.md  ADR-003-two-phase-validation.md  ADR-004-fastapi-over-flask.md  ADR-005-chromadb-over-faiss.md
docs/plans/: day1-plan.md  day1.5-plan.md  day2-plan.md  day3-plan.md
results/: pipeline_summary.json
src/: analyzer.py  api.py  corrector.py  data_paths.py  generator.py  judge.py  labeler.py  multi_hop.py  normalizer.py  pipeline.py  run_generation.py  run_labeling.py  sanity_check.py  schemas.py  templates.py  validator.py  vector_store.py
tests/: test_analyzer.py  test_api.py  test_corrector.py  test_data_paths.py  test_generator.py  test_judge.py  test_labeler.py  test_multi_hop.py  test_normalizer.py  test_pipeline.py  test_run_generation.py  test_run_labeling.py  test_sanity_check.py  test_schemas.py  test_templates.py  test_validator.py  test_vector_store.py
